fixed the broken style sheet.

--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: $black;
+	background: $white;
   font: 18px/1.4 $helvetica;
-  color: $green;
+  color: $darkGray;
 }
 
 .container {
@@ -32,7 +32,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $darkGreen;
+  color: $darkerGray;
   font-weight: bold;
 
   line-height: 1.7;
@@ -61,7 +61,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $green;
+  color: $gray;
 }
 
 p {
@@ -117,7 +117,7 @@ img {
 
 .date {
   font-style: italic;
-  color: $green;
+  color: $gray;
 }
 
 // Specify the color of the selection
@@ -256,7 +256,7 @@ nav {
     margin: 1.8em .8em;
     border-left: 2px solid $gray;
     padding: 0.1em 1em;
-    color: $green;
+    color: $gray;
     font-size: 22px;
     font-style: italic;
   }
